--- a/my-cv.tex
+++ b/my-cv.tex
@@ -70,6 +70,8 @@
 \selectlanguage{\jobname}
 \begin{flushright}
 {\scriptsize {
+  \github{pablouser1/My-CV}
+  \linebreak
   \en{Generated: \today}
   \es{Generado el \today}
 }}
