--- a/my-cv.tex
+++ b/my-cv.tex
@@ -173,10 +173,7 @@
   \en{Volunteering}
   \es{Voluntariado}
 }
-\cvevent{Hackers Week 9}{\homepage{hackersweek.es}}{
-  \en{20-24th of February 2023}
-  \es{20-24 de Febrero 2023}
-}{ETS Ingeniería Informática}
+\cvevent{Hackers Week 9 & X}{\homepage{hackersweek.es}}{}{ETS Ingeniería Informática}
 
 \divider
 
