--- a/my-cv.tex
+++ b/my-cv.tex
@@ -173,7 +173,7 @@
   \en{Volunteering}
   \es{Voluntariado}
 }
-\cvevent{Hackers Week 9 & X}{\homepage{hackersweek.es}}{}{ETS Ingeniería Informática}
+\cvevent{Hackers Week 9 \& X}{\homepage{hackersweek.es}}{}{ETS Ingeniería Informática}
 
 \divider
 
