--- a/my-cv.tex
+++ b/my-cv.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%
 % This is an sample CV template created using altacv.cls
-% (v1.6.5, 3 Nov 2022) written by LianTze Lim (liantze@gmail.com). Compiles with pdfLaTeX, XeLaTeX and LuaLaTeX.
+% (v1.7.4, 30 July 2025) written by LianTze Lim (liantze@gmail.com). Compiles with pdfLaTeX, XeLaTeX and LuaLaTeX.
 %
 %% It may be distributed and/or modified under the
 %% conditions of the LaTeX Project Public License, either version 1.3
@@ -11,10 +11,15 @@
 %% version 2003/12/01 or later.
 %%%%%%%%%%%%%%%%
 
-\documentclass[10pt,a4paper,ragged2e,withhyper]{altacv/altacv}
+%% Use the "normalphoto" option if you want a normal photo instead of cropped to a circle
+% \documentclass[10pt,a4paper,withhyper,normalphoto]{altacv}
+
+\documentclass[10pt,a4paper,withhyper]{altacv/altacv}
+%% AltaCV uses the fontawesome5 and simpleicons packages.
+%% See http://texdoc.net/pkg/fontawesome5 and http://texdoc.net/pkg/simpleicons for full list of symbols.
 
 % Change the page layout if you need to
-\geometry{left=1.25cm,right=1.25cm,top=0.5cm,bottom=1.5cm,columnsep=1.2cm}
+\geometry{left=1.25cm,right=1.25cm,top=1.5cm,bottom=1.5cm,columnsep=1.2cm}
 
 % multi-lang config
 \usepackage[english,spanish]{babel}
@@ -26,7 +31,9 @@
 
 % Change the font if you want to, depending on whether
 % you're using pdflatex or xelatex/lualatex
-\ifxetexorluatex
+% WHEN COMPILING WITH XELATEX PLEASE USE
+% xelatex -shell-escape -output-driver="xdvipdfmx -z 0" sample.tex
+\iftutex
   % If using xelatex or lualatex:
   \setmainfont{Roboto Slab}
   \setsansfont{Lato}
@@ -63,8 +70,22 @@
 
 % Change the bullets for itemize and rating marker
 % for \cvskill if you want to
-\renewcommand{\itemmarker}{{\small\textbullet}}
-\renewcommand{\ratingmarker}{\faCircle}
+\renewcommand{\cvItemMarker}{{\small\textbullet}}
+\renewcommand{\cvRatingMarker}{\faCircle}
+% ...and the markers for the date/location for \cvevent
+% \renewcommand{\cvDateMarker}{\faCalendar*[regular]}
+% \renewcommand{\cvLocationMarker}{\faMapMarker*}
+
+
+% If your CV/résumé is in a language other than English,
+% then you probably want to change these so that when you
+% copy-paste from the PDF or run pdftotext, the location
+% and date marker icons for \cvevent will paste as correct
+% translations. For example Spanish:
+\es{
+  \renewcommand{\locationname}{Ubicación}
+  \renewcommand{\datename}{Fecha}
+}
 
 \begin{document}
 \selectlanguage{\jobname}
@@ -87,18 +108,16 @@
 % \photoL{2.5cm}{Yacht_High,Suitcase_High}
 
 \personalinfo{%
-  \email{me@pabloferreiro.es}
-  \location{Benalmádena, Málaga, Spain}
+  \email{contact@pabloferreiro.es}
+  \location{Málaga, Spain}
   \homepage{pabloferreiro.es}
   \github{pablouser1}
   \linkedin{pablo-ferreiro-romero-bba809257}
-  \twitter{pablouser1}
-  \NewInfoField{telegram}{\faTelegram}[https://t.me/]
-  \telegram{pablouser1}
-  \printinfo{\faHashtag}{@pablouser1:matrix.org}[https://matrix.to/\#/@pablouser1:matrix.org]
 }
 
 \makecvheader
+%% Depending on your tastes, you may want to make fonts of itemize environments slightly smaller
+% \AtBeginEnvironment{itemize}{\small}
 
 %% Set the left/right column width ratio to 6:4.
 \columnratio{0.6}
@@ -132,7 +151,7 @@
 }
 \begin{itemize}
 \item {
-  \en{Blog made from scratch using PHP7}
+  \en{Blog made from scratch using PHP}
   \es{Blog hecho desde cero usando PHP, sin frameworks}
 }
 \item Web: \homepage{iescerrodelviento.es}
@@ -173,7 +192,7 @@
   \en{Volunteering}
   \es{Voluntariado}
 }
-\cvevent{Hackers Week 9 \& X}{\homepage{hackersweek.es}}{}{ETS Ingeniería Informática}
+\cvevent{Hackers Week 12 \& 11}{\homepage{hackersweek.es}}{}{ETS Ingeniería Informática}
 
 \divider
 
@@ -184,7 +203,6 @@
 
 \medskip
 
-\newpage
 \switchcolumn
 
 \cvsection{
@@ -236,17 +254,16 @@
 \divider\smallskip
 
 \cvtag{PHP}
-\cvtag{Python}
-\cvtag{GoLang}
 \cvtag{Typescript}
+\cvtag{GoLang}
+\cvtag{Python}
 
 \divider\smallskip
 
 \cvtag{Laravel}
-\cvtag{Flutter}
-\cvtag{Vue}\\
 \cvtag{SolidJS}
 \cvtag{Svelte}
+\cvtag{Flutter}
 
 \divider\smallskip
 
@@ -281,31 +298,13 @@
   \es{Educación}
 }
 
-\cvevent{Bachillerato \en{(High school)}}{IES Al-Baytar}{2019 -- 2020}{}
-\begin{itemize}
-    \es{\item Rama tecnológica}
-    \item Bilingual modality
-\end{itemize}
-
-\divider
-
 \cvevent{
   \en{Computer Engineering}
-  \es{Ingeniería de Computadores}
+  \es{Ingeniería Informática}
 }{Universidad de Málaga}{2021 -- {
   \en{Ongoing}
   \es{Actualidad}
 }}{}
-\begin{itemize}
-    \item {
-      \en{Currently on the 2nd year}
-      \es{Actualmente en el segundo año}
-    }
-    \item {
-      \en{Bilingual modality}
-      \es{Modalidad bilingüe}
-    }
-\end{itemize}
 
 \end{paracol}
 
